--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "e2adbc46",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
     "\n",
     "from pathlib import Path\n",
     "import os\n",
@@ -19,21 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "0938f3d4",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "metadata_filename = 'metadata.csv'\n",
     "counts_dirname = 'counts'\n",
@@ -49,7 +35,7 @@
     "filtered_df = filtered_df.reset_index(drop=True)\n",
     "\n",
     "author_count = filtered_df['author'].value_counts()\n",
-    "many_works_author = author_count[author_count >= 10]\n",
+    "many_works_author = author_count[author_count >= 50]\n",
     "filtered_df = filtered_df[filtered_df.author.isin(many_works_author.index.to_numpy())].reset_index()\n",
     "\n",
     "'PG8700' in filtered_df.id"
@@ -57,30 +43,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "df4ee5a5",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filtered_df = filtered_df.sample(n=50, random_state=2).reset_index()\n",
+    "#filtered_df = filtered_df.sample(n=50, random_state=2).reset_index()\n",
     "\n",
     "sampled_authors = filtered_df.author.sample(n=50, random_state=1)\n",
-    "\n",
+    "# Some author names are duplicated, the set contains 30 authors\n",
+    "print(len(list(sampled_authors)))\n",
+    "print(len(set(sampled_authors)))\n",
     "train_ids = []\n",
     "test_ids = []\n",
     "val_ids = []\n",
     "\n",
-    "for author in sampled_authors:\n",
-    "    works = filtered_df[filtered_df.author == author].sample(n=3, random_state=1)\n",
-    "    train_id, test_id, val_id = works.id\n",
+    "# Split train, test, validation, total 50 books per author, total 30 authors\n",
+    "# 60% = 30 books into training set\n",
+    "# 30% = 15 books into test set\n",
+    "# 10% = 5 books into validation set\n",
+    "print(len(set(sampled_authors)))\n",
+    "for author in set(sampled_authors):\n",
+    "    works = filtered_df[filtered_df.author == author].sample(n=50, random_state=1)\n",
+    "    works_list = list(works.id)\n",
+    "    train_id, test_id, val_id = works_list[:30], works_list[30:45], works_list[45:]\n",
     "    \n",
     "    # Does not check if this file exists and is valid\n",
-    "    \n",
-    "    train_ids.append(train_id)\n",
-    "    test_ids.append(test_id)\n",
-    "    val_ids.append(val_id)\n",
-    "\n",
-    "\n",
+    "    train_ids.extend(train_id)\n",
+    "    test_ids.extend(test_id)\n",
+    "    val_ids.extend(val_id)\n",
     "\n",
     "train_df = filtered_df[filtered_df.id.isin(train_ids)]\n",
     "test_df = filtered_df[filtered_df.id.isin(test_ids)]\n",
@@ -88,74 +78,32 @@
     "\n",
     "df_arrs = []\n",
     "for df in [train_df, test_df, val_df]:\n",
-    "    # one hot\n",
-    "    #missing_values = df['author'].isnull().sum()\n",
-    "    #print(\"Number of missing values in 'author' column: \", missing_values)\n",
+    "    df = df[['id', 'author']]\n",
     "\n",
-    "    one_hot = pd.get_dummies(df['author'])\n",
-    "    df = pd.concat([df, one_hot], axis=1)\n",
-    "    docs = []   \n",
+    "    docs = []\n",
     "    docs_unavail_pg_ids = []\n",
     "    for pg_id in df.id:    \n",
     "        try:\n",
-    "            tokens = get_book(pg_id, os.path.join(tokens_dirname), level='tokens')\n",
-    "            # docs: a list of list\n",
-    "            docs.append(tokens)\n",
+    "            doc = ' '.join(get_book(pg_id, os.path.join(tokens_dirname), level='tokens'))\n",
+    "            docs.append(doc)\n",
     "        except:\n",
     "            docs_unavail_pg_ids.append(pg_id)\n",
     "    \n",
     "    df = df[~df.id.isin(docs_unavail_pg_ids)].reset_index()\n",
-    "    df = df.drop(columns=['level_0', 'index', 'id', 'title', 'author', 'authoryearofbirth', 'authoryearofdeath'])\n",
+    "    df.insert(2, 'text', docs, True)\n",
     "    \n",
-    "    # split to 512\n",
-    "    chunk_size = 512\n",
-    "    chunk_list = []\n",
-    "    for index, row in df.iterrows():\n",
-    "        doc = docs[index]\n",
-    "        for i in range(0, len(doc), chunk_size):\n",
-    "            sub_doc = pd.Series({\"text\": ' '.join(doc[i: i+chunk_size])})\n",
-    "            new_row = pd.concat([sub_doc, row])\n",
-    "            chunk_list.append(new_row)\n",
-    "    chunk_df = pd.DataFrame(chunk_list)\n",
-    "\n",
-    "    #df.insert(0, 'text', docs, True)\n",
-    "    df_arrs.append(chunk_df)\n",
+    "    df_arrs.append(df)\n",
     "\n",
     "train_df, test_df, val_df = df_arrs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0540bff1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df.to_csv('train.csv', index=False)\n",
-    "test_df.to_csv('test.csv', index=False)\n",
-    "val_df.to_csv('val.csv', index=False)"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.0"
-  }
+   "name": "python"
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
