--- a/BERT/transformer.ipynb
+++ b/BERT/transformer.ipynb
@@ -84,8 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-04-15T17:01:51.358554Z",
+     "end_time": "2023-04-15T17:01:54.245774Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -107,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-12T18:48:50.609530Z",
-     "start_time": "2023-04-12T18:48:50.550438Z"
+     "start_time": "2023-04-15T17:01:55.133915Z",
+     "end_time": "2023-04-15T17:01:56.423251Z"
     }
    },
    "outputs": [],
@@ -132,21 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-12T18:48:52.029315Z",
-     "start_time": "2023-04-12T18:48:51.541598Z"
+     "start_time": "2023-04-15T17:01:58.433874Z",
+     "end_time": "2023-04-15T17:01:58.838171Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "'cuda'"
-      ]
+      "text/plain": "'cpu'"
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,11 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-12T18:48:53.161802Z",
-     "start_time": "2023-04-12T18:48:53.145101Z"
+     "start_time": "2023-04-15T17:02:00.419717Z",
+     "end_time": "2023-04-15T17:02:00.437584Z"
     }
    },
    "outputs": [],
@@ -228,8 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-04-15T17:02:01.265634Z",
+     "end_time": "2023-04-15T17:02:02.784395Z"
+    }
+   },
    "outputs": [],
    "source": [
     "training_set = CustomDataset(train_df.reset_index(drop=True), tokenizer, MAX_LEN)\n",
@@ -263,11 +271,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-12T18:48:53.953725Z",
-     "start_time": "2023-04-12T18:48:53.944899Z"
+     "start_time": "2023-04-15T17:02:04.787491Z",
+     "end_time": "2023-04-15T17:02:04.790477Z"
     }
    },
    "outputs": [],
@@ -321,8 +329,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-04-15T17:02:06.847583Z",
+     "end_time": "2023-04-15T17:02:06.851276Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#https://stackoverflow.com/questions/71998978/early-stopping-in-pytorch\n",
@@ -353,11 +366,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-12T18:48:58.284440Z",
-     "start_time": "2023-04-12T18:48:58.272065Z"
+     "start_time": "2023-04-15T17:02:08.214256Z",
+     "end_time": "2023-04-15T17:02:08.217141Z"
     }
    },
    "outputs": [],
@@ -368,11 +381,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-12T18:49:01.896725Z",
-     "start_time": "2023-04-12T18:49:01.895502Z"
+     "start_time": "2023-04-15T17:02:08.712654Z",
+     "end_time": "2023-04-15T17:02:08.725506Z"
     }
    },
    "outputs": [],
@@ -471,8 +484,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-04-15T17:02:10.415967Z",
+     "end_time": "2023-04-15T17:02:10.419980Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def make_model(pattern):\n",
@@ -496,35 +514,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-04-15T17:02:45.458311Z",
+     "end_time": "2023-04-15T17:02:45.465612Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# train max and mean pooling strategies\n",
-    "patterns = ['max', 'mean']"
+    "patterns = ['max']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "model=make_model('default')"
+   ],
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-15T17:03:18.191732Z",
+     "end_time": "2023-04-15T17:03:19.700871Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true,
+    "ExecuteTime": {
+     "start_time": "2023-04-15T17:02:46.144406Z",
+     "end_time": "2023-04-15T17:02:47.573409Z"
+    }
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.bias']\n",
-      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.bias']\n",
-      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.bias']\n",
-      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
